--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kane-thornwyrd.github.com",
   "version": "0.1.0",
+  "homepage": "http://kane-thornwyrd.github.io",
   "private": true,
   "dependencies": {
     "bootstrap": "3.3.7",
@@ -30,7 +31,9 @@
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
-    "build": "npm-run-all build-css build-js"
+    "build": "npm-run-all build-css build-js",
+    "predeploy": "npm run build",
+    "deploy": "node deploy.js"
   },
   "devDependencies": {
     "compass-importer": "0.4.1",
@@ -38,6 +41,7 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.5.1",
+    "gh-pages": "1.1.0",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "4.1.2",
     "react-scripts": "1.0.17"
