--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
+build/Release
 src/**/*.css
 
 # Dependency directories
@@ -64,6 +65,9 @@ typings/
 
 # testing
 /coverage
+
+# production
+/build
 
 # misc
 .DS_Store
