--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "history": "4.7.2",
     "loaders.css": "0.1.2",
     "lodash": "4.17.4",
+    "neataptic": "1.4.7",
     "normalize.css": "7.0.0",
     "react": "16.2.0",
     "react-addons-update": "15.6.2",
