--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lodash": "4.17.4",
     "neataptic": "1.4.7",
     "normalize.css": "7.0.0",
+    "parse-location": "1.0.5",
     "react": "16.2.0",
     "react-addons-update": "15.6.2",
     "react-bootstrap": "0.31.5",
