--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "lodash": "4.17.4",
     "neataptic": "1.4.7",
     "normalize.css": "7.0.0",
+    "npm-stats": "1.2.0",
     "parse-location": "1.0.5",
     "react": "16.2.0",
     "react-addons-update": "15.6.2",
     "react-bootstrap": "0.31.5",
     "react-dom": "16.2.0",
-    "react-headroom": "2.2.2",
+    "react-event-timeline": "1.4.1",
+    "react-github-corner": "2.0.0",
     "react-loadable": "5.3.1",
     "react-loaders": "3.0.1",
     "react-redux": "5.0.6",
@@ -23,7 +25,8 @@
     "react-router-dom": "4.2.2",
     "react-router-redux": "4.0.8",
     "redux": "3.7.2",
-    "redux-thunk": "2.2.0"
+    "redux-thunk": "2.2.0",
+    "superagent": "3.8.2"
   },
   "scripts": {
     "test": "react-scripts test --env=jsdom",
